Fix class and ID names for improved clarity and readability  - Updated class and ID names to be more descriptive and reflective of their content. - Improved naming conventions for better code maintainability. - Ensured consistency in naming across different sections.

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ body {
 .container .header nav .logo span,
 .container .header nav .logo i {
     font-size: 25px;
-    color:white;
+    color: white;
 }
 
 /* end header */
@@ -271,6 +271,12 @@ body {
 
 /*  */
 /*  */
+.container #galary {
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(128, 128, 128, 0.295);
+}
+
 .container #galary .galary-parent {
     width: 90%;
     margin: auto;
@@ -353,6 +359,8 @@ body {
     width: 100%;
     height: 100%;
 }
+
+/*  */
 /*  */
 .container #protifolio {
     width: 100%;
